fix: don't wrap whitespace

--- a/_sass/_surge.scss
+++ b/_sass/_surge.scss
@@ -709,6 +709,7 @@ h6 {
       margin-top: 0.2rem;
       margin-bottom: 0.75rem;
       line-height: 2.75rem;
+      white-space: nowrap;
     }
   }
 }
